# aiogram-forms

./: .coveragerc  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.data/menus/: menus.py
.github/workflows/: ci.yaml  codeql-analysis.yml
aiogram_forms/: __init__.py  base.py  const.py  dispatcher.py  enums.py  errors.py  fields.py  filters.py  forms.py  i18n.py  manager.py  menus.py  middleware.py  states.py  types.py  utils.py  validators.py
aiogram_forms/core/: const.py  entities.py  manager.py  states.py
aiogram_forms/forms/: __init__.py  base.py  const.py  errors.py  fields.py  forms.py  manager.py  validators.py
aiogram_forms/forms/fields/: __init__.py  text.py
aiogram_forms/forms/validators/: __init__.py
aiogram_forms/menus/: __init__.py  actions.py  manager.py  menus.py
docs/en/: 0.index.md  1.installation.md  3.changelog.md  4.roadmap.md
docs/en/2.usage/: _dir.yml  dispatcher.md  fields.md  forms.md  manager.md
docs/ru/: 0.index.md  1.index.md  1.installation.md  2.installation.md  3.changelog.md  5.roadmap.md
docs/ru/2.usage/: 0.dispatcher.md  2.fields.md  3.manager.md  _dir.yml
docs/ru/3.usage/: 1.forms.md
examples/: base.py  field_types_example.py  i18n.py  simple_form.py
examples/locales/: mybot.pot
examples/locales/ru/LC_MESSAGES/: mybot.mo  mybot.po
locales/: aiogram_forms.pot
locales/be/LC_MESSAGES/: aiogram_forms.mo  aiogram_forms.po
locales/ru/LC_MESSAGES/: aiogram_forms.mo  aiogram_forms.po
locales/uk/LC_MESSAGES/: aiogram_forms.mo  aiogram_forms.po
tests/: conftest.py  test_aiogram_forms.py  test_dispatcher.py  test_filters.py  test_flow.py  test_middleware.py  test_utils.py  test_validators.py
tests/core/: test_states.py
tests/forms/: test_base.py  test_fields.py  test_manager.py  test_validators.py
tests/forms/fields/: test_base.py
