[tool.poetry]
name = "aiogram-forms"
version = "1.1.1"
description = "Forms for aiogram"
authors = ["Ivan Borisenko <i.13g10n@icloud.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://13g10n.com/docs/aiogram-forms"
repository = "https://github.com/13g10n/aiogram-forms"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Environment :: Plugins",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10"
]
keywords = ["aiogram", "telegram", "forms"]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^3.0.0b5"

[tool.poetry.group.dev.dependencies]
coverage = "^7.0.1"
pylint = "^2.15.9"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
mypy = "^1.0.0"
babel = "^2.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120

[tool.coverage.run]
omit = [
	"tests/*"
]

[tool.coverage.report]
exclude_lines = [
	"pragma: no cover",
	"if TYPE_CHECKING:"
]

[tool.mypy]
strict = true
