[tool.poetry]
name = "aiogram-forms"
version = "1.2.0"
description = "An addition for `aiogram` which allows you to create different forms and process user input step by step easily."
authors = ["Ivan Borisenko <contact@13g10n.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://aiogram-forms.13g10n.com"
repository = "https://github.com/13g10n/aiogram-forms"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Environment :: Plugins",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10"
]
keywords = ["aiogram", "telegram", "forms"]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^3.0.0rc2"

[tool.poetry.group.dev.dependencies]
coverage = "^7.0.1"
pylint = "^2.15.9"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
mypy = "^1.0.0"
babel = "^2.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120

[tool.coverage.run]
omit = [
	"tests/*"
]

[tool.coverage.report]
exclude_lines = [
	"pragma: no cover",
	"if TYPE_CHECKING:"
]

[tool.mypy]
strict = true
